--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" >
     </uses-permission>
 
-    <application>
+    <application
+        android:name="com.MyApplication">
         <activity
             android:name="com.ui.LauncherActivity"
             android:label="@string/app_name"
